--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,11 @@
+:root {
+    --background: white;
+}
+
+body {
+    transition: background 500ms ease-in-out, color 200ms ease;
+}
+
 .cat-card {
     width: 300px;
 }
@@ -14,4 +22,109 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
+}
+
+.modal-wrapper {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    z-index: 1;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-contents {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    background-color: var(--background);
+    height: 80%;
+    width: 50%;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.5);
+}
+
+.modal-image {
+    width: 100%;
+    border-radius: 20px;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: center;
+    font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px 13px 0 0;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.modal-title {
+    margin: 0;
+}
+
+.search-box-wrapper {
+    text-align: center;
+}
+
+.search-box {
+    min-width: 40%;
+    height: 30px;
+    padding: 0 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+    border: 2px solid #bababa;
+}
+
+.search-breed {
+    background: white;
+    position: absolute;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    list-style: none;
+    min-width: 40%;
+    border: 1px solid #bababa;
+    margin-top: -2px;
+}
+
+.search-breed-item {
+    list-style: none;
+    padding: 0 20px;
+    cursor: pointer;
+}
+
+.search-breed-item:hover {
+    background-color: #eaeaea;
+}
+
+.search-breed-container {
+    padding: 0;
+    margin: 10px 0;
+}
+
+.post-section {
+    margin-top: 40px;
 }
